/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
option java_package = "org.apache.hadoop.raft.proto";
option java_outer_classname = "RaftServerProtocolProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.common.raft;

import "Raft.proto";

message RequestVoteRequestProto {
  required RaftServerRequestProto serverRequest = 1;
  required uint64 candidateTerm = 2;
  optional TermIndexProto candidateLastEntry = 3;
}

message RequestVoteReplyProto {
  required RaftServerReplyProto serverReply = 1;
  required bool shouldShutdown = 2;
}

message AppendEntriesRequestProto {
  required RaftServerRequestProto serverRequest = 1;
  required uint64 leaderTerm = 2;
  optional TermIndexProto previousLog = 3;
  repeated LogEntryProto entries = 4;
  required uint64 leaderCommit = 5;
  required bool initializing = 6;
}

message AppendEntriesReplyProto {
  enum AppendResult {
    SUCCESS = 1;
    NOT_LEADER = 2;
    INCONSISTENCY = 3;
  }

  required RaftServerReplyProto serverReply = 1;
  required uint64 nextIndex = 2;
  required AppendResult result = 3;
}

service RaftServerProtocolService {
  rpc requestVote(RequestVoteRequestProto)
      returns(RequestVoteReplyProto);

  rpc appendEntries(AppendEntriesRequestProto)
      returns(AppendEntriesReplyProto);
}
